@@ -296,6 +296,8 @@ L["ICONMENU_SHOWTIMERTEXT"] = "Show timer text"
 L["ICONMENU_SHOWTIMERTEXT_DESC"] = [[Check this option to display a textual display of the remaining cooldown/duration on the icon.
 
 This is only applicable if OmniCC (or similar) is installed.]]
+L["ICONMENU_CLOCKGCD"] = "Allow Global Cooldown"
+L["ICONMENU_CLOCKGCD_DESC"] = [[Check this option to allow the timer to react to and show the gloal cooldown instead of simply ignoring it.]]
 
 L["ICONMENU_SHOWPBAR_DESC"] = "Shows a bar that is overlaid across the top half of the icon that will indicate the power still needed to cast the spell (or the power that you have when 'Fill bars up' is checked)"
 L["ICONMENU_SHOWCBAR_DESC"] = "Shows a bar that is overlaid across the bottom half of the icon that will indicate the cooldown/duration remaining (or the time that has passed if 'Fill bars up' is checked)"
